--- a/public/style.css
+++ b/public/style.css
@@ -225,6 +225,17 @@
     cursor: pointer;
 }
 
+/* LOADING SECTION  */
+.loading-section {
+    height: 100vh;
+}
+
+.loading-box {
+    padding: 1rem 4rem;
+    border-radius: 5px;
+    box-shadow: 0px 0px 10px #bebbbb;
+}
+
 @media(max-width:1024px) {
 
     /* onboarding-section */
