--- a/public/style.css
+++ b/public/style.css
@@ -236,6 +236,67 @@
     box-shadow: 0px 0px 10px #bebbbb;
 }
 
+
+/* NAVBAR SECTION  */
+.nav-profile-img-box {
+    width: 30px;
+    cursor: pointer;
+    border-radius: 15px;
+    background-color: #FE8C00;
+}
+
+.nav-profile-img-box img {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+}
+
+.nav-profile-img-box div {
+    font-size: 1.2rem;
+}
+
+.nav-p-name {
+    font-size: 0.9rem;
+    font-weight: 500;
+    transition: 0.3s;
+    padding: 1px 9px;
+    border-radius: 4px;
+    box-shadow: 0px 0px 8px #d1caca;
+    position: absolute;
+    right: 1px;
+    background-color: #fff;
+}
+
+.show-p-name {
+    opacity: 1;
+}
+
+.hide-p-name {
+    opacity: 0;
+}
+
+.nav-profile-detail-box {
+    flex-direction: column;
+    position: absolute;
+    right: 2rem;
+    font-size: 0.9rem;
+    font-weight: 500;
+    padding: 7px 60px 7px 8px;
+    border-radius: 6px;
+    box-shadow: 0px 0px 7px #cac9c9;
+    z-index: 100;
+    background-color: #fff;
+    transition: 0.2s linear;
+}
+
+.nav-profile-detail-box p:nth-of-type(2) {
+    cursor: pointer;
+}
+
+.nav-profile-detail-box p:nth-of-type(2) span {
+    font-size: 1rem;
+}
+
 @media(max-width:1024px) {
 
     /* onboarding-section */
